--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -3,26 +3,26 @@
 //
 
 .btn {
-  display: inline-block;
-  font-family: $btn-font-family;
-  font-weight: $btn-font-weight;
-  text-align: center;
-  vertical-align: middle;
-  user-select: none;
-  background-color: transparent;
-  border: $btn-border-width solid transparent;
-  @include button-size;
-  transition: $btn-transition;
-  text-transform: uppercase;
+	display: inline-block;
+	font-family: $btn-font-family;
+	font-weight: $btn-font-weight;
+	text-align: center;
+	vertical-align: middle;
+	user-select: none;
+	background-color: transparent;
+	border: $btn-border-width solid transparent;
+	@include button-size;
+	transition: $btn-transition;
+	text-transform: uppercase;
 
-  /* &:focus,
+	/* &:focus,
 	&.focus {
 		outline: 0;
 		box-shadow: $btn-focus-box-shadow;
 	} */
 
-  // Disabled comes first so active can properly restyle
-  /* 	&.disabled,
+	// Disabled comes first so active can properly restyle
+	/* 	&.disabled,
 	&:disabled {
 		opacity: $btn-disabled-opacity;
 		@include box-shadow(none);
@@ -41,4 +41,16 @@
 			@include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
 		}
 	} */
+}
+
+@each $color, $value in $theme-colors {
+	.btn--#{$color} {
+		@include button-variant-bg($value, $value);
+	}
+}
+
+@each $color, $value in $theme-colors {
+	.btn-outline-#{$color} {
+		@include button-variant-outline($value);
+	}
 }
