--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -43,14 +43,14 @@
 	} */
 }
 
-@each $color, $value in $theme-colors {
+@each $color, $value in $button-colors {
 	.btn--#{$color} {
 		@include button-variant-bg($value, $value);
 	}
 }
 
-@each $color, $value in $theme-colors {
-	.btn-outline-#{$color} {
+@each $color, $value in $button-colors {
+	.btn--outline-#{$color} {
 		@include button-variant-outline($value);
 	}
 }
