--- a/src/scss/abstracts/variables/_buttons.scss
+++ b/src/scss/abstracts/variables/_buttons.scss
@@ -2,7 +2,9 @@
 // Buttons settings
 //
 
-// Button sizes
+// Basic button sizes
+//
+// Sizes for basic button variants
 
 $btn-padding-y: 16 !default;
 $btn-padding-x: 55 !default;
@@ -17,7 +19,6 @@ $btn-font-weight: 700 !default;
 // Button border
 
 $btn-border-width: 2 !default;
-
 $btn-border-radius-sm: 5 !default;
 $btn-border-radius-lg: 100 !default;
 
