fixed bug on hovering some buttons

--- a/main.css
+++ b/main.css
@@ -320,7 +320,7 @@ html {
   color: #f69d35;
   border-color: #f69d35; }
   .btn--outline-yellow:hover {
-    color: #758db0;
+    color: #ffffff;
     background: #f69d35; }
 
 .btn--facebook {
