--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,4 +2,4 @@
 // Variables import
 //
 
-@import 'variables/buttons', 'variables/typography';
+@import 'variables/button', 'variables/typography', 'variables/alert';
