--- a/main.css
+++ b/main.css
@@ -362,6 +362,77 @@ html {
   .btn--google:hover {
     background: #ea7466; }
 
-.btn__icon {
-  margin-right: 20px;
-  margin-left: -20px; }
+.alert {
+  width: 100%;
+  padding: 1.875em 1.875em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 700;
+  font-family: "Lato";
+  border-radius: 0.3125em;
+  text-transform: uppercase;
+  -webkit-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out; }
+  .alert__text {
+    font-size: 1.2rem;
+    line-height: 1.3;
+    letter-spacing: 0.125em; }
+  .alert__link {
+    font-weight: 700;
+    text-decoration: underline; }
+  .alert__close {
+    color: inherit;
+    cursor: pointer;
+    font-size: 1.2rem; }
+
+.alert--success {
+  color: #ffffff;
+  background: #00b06c; }
+  .alert--success:hover {
+    background: #00ca7c; }
+
+.alert--warning {
+  color: #ffffff;
+  background: #f69d35; }
+  .alert--warning:hover {
+    background: #f7a94d; }
+
+.alert--error {
+  color: #ffffff;
+  background: #ff5063; }
+  .alert--error:hover {
+    background: #ff6a7a; }
+
+.alert--info {
+  color: #ffffff;
+  background: #13b5ea; }
+  .alert--info:hover {
+    background: #29bdee; }
+
+.alert--success-light {
+  color: #00b06c;
+  background: #c9ffe5;
+  border: 0.16667em solid #00b06c; }
+
+.alert--warning-light {
+  color: #f69d35;
+  background: #fff0cc;
+  border: 0.16667em solid #f69d35; }
+
+.alert--error-light {
+  color: #ff5063;
+  background: #ffdbdb;
+  border: 0.16667em solid #ff5063; }
+
+.alert--info-light {
+  color: #13b5ea;
+  background: #c9f2ff;
+  border: 0.16667em solid #13b5ea; }
