--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,7 @@
 @import 'layout/header', 'layout/footer';
 
 // 5. Components
-@import 'components/buttons';
+@import 'components/button', 'components/alert';
 
 // 6. Page-specific styles
 @import 'pages/home';
