--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -6,14 +6,23 @@
 	display: inline-block;
 	font-family: $btn-font-family;
 	font-weight: $btn-font-weight;
+	font-size: PxToRem($btn-font-size);
+	line-height: $btn-line-height;
 	text-align: center;
 	vertical-align: middle;
 	user-select: none;
 	background-color: transparent;
 	border: PxToEm($btn-border-width, $btn-font-size) solid transparent;
-	@include button-size;
 	transition: $btn-transition;
 	text-transform: uppercase;
+
+	&--sm {
+		@include button-size-sm;
+	}
+
+	&--lg {
+		@include button-size-lg;
+	}
 
 	&--rounded-sm {
 		border-radius: PxToEm($btn-border-radius-sm, $btn-font-size);
