Rewritten docs, start form component, restructured folders

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,68 +1,1 @@
-// Basic colors pallete
-// ------------------
-// Colors for styling every element on website
-
-$color-red: #ff5063 !default;
-$color-pink: #e2548d !default;
-$color-grey: #718093 !default;
-$color-green: #00b06c !default;
-$color-black: #122748 !default;
-$color-purple: #7740a2 !default;
-$color-blue: #13b5ea !default;
-$color-yellow: #f69d35 !default;
-
-// Social buttons colors
-// ------------------
-// Colors for styling social buttons
-
-$color-facebook: #2a66b3 !default;
-$color-twitter: #35bbec !default;
-$color-google: #e55644 !default;
-
-$social-colors: (
-	'facebook': $color-facebook,
-	'twitter': $color-twitter,
-	'google': $color-google
-);
-
-// Typography colors
-// ------------------
-// Colors for styling text
-
-$color-text-light: #ffffff !default;
-$color-text-dark: #758db0 !default;
-
-// Button colors
-// ------------------
-// For styling buttons
-
-$button-colors: (
-	'red': $color-red,
-	'pink': $color-pink,
-	'grey': $color-grey,
-	'green': $color-green,
-	'black': $color-black,
-	'purple': $color-purple,
-	'blue': #13b5ea,
-	'yellow': #f69d35
-);
-
-// Alert colors
-// ------------------
-// For styling alerts
-
-$alert-colors-normal: (
-	'success': $color-green,
-	'warning': $color-yellow,
-	'error': $color-red,
-	'info': $color-blue
-);
-
-// Alert light colors
-
-$alert-colors-light: (
-	'success': #c9ffe5,
-	'warning': #fff0cc,
-	'error': #ffdbdb,
-	'info': #c9f2ff
-);
+@import 'colors/global';
