--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,4 +2,5 @@
 // Variables import
 //
 
-@import 'variables/button', 'variables/typography', 'variables/alert';
+@import 'variables/button', 'variables/typography', 'variables/alert',
+	'variables/form';
