--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -15,6 +15,11 @@
 	border: PxToEm($btn-border-width, $btn-font-size) solid transparent;
 	transition: $btn-transition;
 	text-transform: uppercase;
+	cursor: pointer;
+
+	// Button modifiers
+	//
+	// Classes for modyfing ".btn" class - adding properties
 
 	&--sm {
 		@include button-size-sm;
@@ -32,42 +37,19 @@
 		border-radius: PxToEm($btn-border-radius-lg, $btn-font-size);
 	}
 
+	// Button elements
+	//
+	// Styling for elements, which are inside of button
+
 	&__icon {
 		margin-right: PxToEm(20, $btn-font-size);
 		margin-left: PxToEm(-20, $btn-font-size);
 	}
-
-	/* &:focus,
-	&.focus {
-		outline: 0;
-		box-shadow: $btn-focus-box-shadow;
-	} */
-
-	// Disabled comes first so active can properly restyle
-	/* 	&.disabled,
-	&:disabled {
-		opacity: $btn-disabled-opacity;
-		@include box-shadow(none);
-	}
-
-	// Opinionated: add "hand" cursor to non-disabled .btn elements
-	&:not(:disabled):not(.disabled) {
-		cursor: pointer;
-	}
-
-	&:not(:disabled):not(.disabled):active,
-	&:not(:disabled):not(.disabled).active {
-		@include box-shadow($btn-active-box-shadow);
-
-		&:focus {
-			@include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
-		}
-	} */
 }
 
 // Button variants creation
 //
-// Loops which create button variants css selectors
+// Loops which create button variants
 
 @each $color, $value in $button-colors {
 	.btn--#{$color} {
@@ -83,9 +65,9 @@
 
 // Social buttons
 //
-// Loops which create social buttons css selectors
+// Loops which create social buttons
 
-@each $social-name, $value in $social-colors {
+@each $social-name, $value in $social-button-colors {
 	.btn--#{$social-name} {
 		@include button-variant-social($value);
 	}
