--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,11 @@
 @charset 'UTF-8';
 
 // 1. Configuration and helpers
-@import 'abstracts/variables', 'abstracts/functions', 'abstracts/mixins',
-	'abstracts/colors';
+@import 'abstracts/colors', 'abstracts/variables', 'abstracts/functions',
+	'abstracts/mixins';
 
 // 2. Vendors
-@import 'vendors/reset';
+@import 'vendors/reset', 'vendors/form-reset';
 
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
@@ -14,7 +14,7 @@
 @import 'layout/header', 'layout/footer';
 
 // 5. Components
-@import 'components/button', 'components/alert';
+@import 'components/button', 'components/alert', 'components/form';
 
 // 6. Page-specific styles
 @import 'pages/home';
