--- a/src/scss/abstracts/colors/_global.scss
+++ b/src/scss/abstracts/colors/_global.scss
@@ -2,21 +2,21 @@
 // ------------------
 // Colors for styling every element on website
 
-$color-red: #ff5063 !default;
-$color-pink: #e2548d !default;
-$color-grey: #718093 !default;
-$color-green: #00b06c !default;
-$color-black: #122748 !default;
-$color-purple: #7740a2 !default;
-$color-blue: #13b5ea !default;
-$color-yellow: #f69d35 !default;
+$color--red: #ff5063 !default;
+$color--pink: #e2548d !default;
+$color--grey: #718093 !default;
+$color--green: #00b06c !default;
+$color--black: #122748 !default;
+$color--purple: #7740a2 !default;
+$color--blue: #13b5ea !default;
+$color--yellow: #f69d35 !default;
 
 // Typography colors
 // ------------------
 // Colors for styling text
 
-$color-text-light: #ffffff !default;
-$color-text-dark: #758db0 !default;
+$color--light: #ffffff !default;
+$color--dark: #758db0 !default;
 
 // Social colors
 // ------------------
