--- a/src/scss/abstracts/mixins/_form.scss
+++ b/src/scss/abstracts/mixins/_form.scss
@@ -4,14 +4,14 @@
 
 // Form input text - sizes
 
-@mixin form-input-text-size {
+@mixin form-input-text--size {
 	padding: PxToEm($form-input-text--padding-y, $form-input-text--font-size)
 		PxToEm($form-input-text--padding-x, $form-input-text--font-size);
 }
 
 // Form input text - font settings
 
-@mixin form-input-text-font {
+@mixin form-input-text--font {
 	font-family: $form-input-text--font-family;
 	font-size: PxToRem($form-input-text--font-size);
 	font-weight: $form-input-text--font-weight;
@@ -20,11 +20,26 @@
 
 // Form input text - border settings
 
-@mixin form-input-text-border {
-	border: PxToEm($form-input-text--border-size, $form-input-text--font-size)
-		solid $form-input-text--border-color;
+@mixin form-input-text--border {
+	border-width: PxToEm(
+		$form-input-text--border-size,
+		$form-input-text--font-size
+	);
 	border-radius: PxToEm(
 		$form-input-text--border-radius,
 		$form-input-text--font-size
 	);
+	border-style: $form-input-text--border-style;
+	border-color: $form-input-text--border-color;
+}
+
+// Form input text - autocomplete settings
+
+@mixin form-input-text--autocomplete-settings {
+	&:-webkit-autofill,
+	&:-webkit-autofill:hover,
+	&:-webkit-autofill:focus {
+		-webkit-text-fill-color: $color--light;
+		box-shadow: 0 0 0 50px $color--black inset;
+	}
 }
