--- a/src/scss/abstracts/variables/_alert.scss
+++ b/src/scss/abstracts/variables/_alert.scss
@@ -9,10 +9,10 @@
 // Alert - normal colors
 
 $alert-colors-normal: (
-	'success': $color-green,
-	'warning': $color-yellow,
-	'error': $color-red,
-	'info': $color-blue
+	'success': $color--green,
+	'warning': $color--yellow,
+	'error': $color--red,
+	'info': $color--blue
 );
 
 // Alert - light colors
@@ -30,35 +30,37 @@ $alert-colors-light: (
 
 // Alert - size settings
 
-$alert-padding-y: 30 !default;
-$alert-padding-x: 30 !default;
+$alert--padding-y: 30 !default;
+$alert--padding-x: 30 !default;
 
 // Alert - border settings
 
-$alert-border-radius: 5 !default;
+$alert--border-radius: 5 !default;
+$alert--border-size: 2 !default;
+$alert--border-style: solid !default;
 
 // Alert - text settings
 
-$alert-text-font-size: 12 !default;
-$alert-text-font-family: 'Lato' !default;
-$alert-text-font-weight: 700 !default;
-$alert-text-line-height: 1.3 !default;
-$alert-text-letter-spacing: 2 !default;
+$alert-text--font-size: 12 !default;
+$alert-text--font-family: 'Lato' !default;
+$alert-text--font-weight: 700 !default;
+$alert-text--line-height: 1.3 !default;
+$alert-text--letter-spacing: 2 !default;
 
 // Alert transition settings
 //
 //
 
-$alert-transition: all 0.15s ease-in-out !default;
+$alert--transition: all 0.15s ease-in-out !default;
 
 // Alert link font settings
 //
 //
 
-$alert-link-font-weight: 700 !default;
+$alert-link--font-weight: 700 !default;
 
 // Alert close icon settings
 //
 //
 
-$alert-close-icon-font-size: 12 !default;
+$alert-close-icon--font-size: 12 !default;
