--- a/src/scss/abstracts/variables/_button.scss
+++ b/src/scss/abstracts/variables/_button.scss
@@ -17,40 +17,40 @@ $social-button-colors: (
 // Basic button colors
 
 $button-colors: (
-	'red': $color-red,
-	'pink': $color-pink,
-	'grey': $color-grey,
-	'green': $color-green,
-	'black': $color-black,
-	'purple': $color-purple,
-	'blue': #13b5ea,
-	'yellow': #f69d35
+	'red': $color--red,
+	'pink': $color--pink,
+	'grey': $color--grey,
+	'green': $color--green,
+	'black': $color--black,
+	'purple': $color--purple,
+	'blue': $color--blue,
+	'yellow': $color--yellow
 );
 
 // Button - sizes
 //
 // Sizes for basic buttons
 
-$btn-padding-y-large: 16 !default;
-$btn-padding-x-large: 55 !default;
+$btn--padding-y-large: 16 !default;
+$btn--padding-x-large: 55 !default;
 
-$btn-padding-y-small: 15 !default;
-$btn-padding-x-small: 20 !default;
+$btn--padding-y-small: 15 !default;
+$btn--padding-x-small: 20 !default;
 
-$btn-line-height: 1.3 !default;
+$btn--line-height: 1.3 !default;
 
 // Button - font settings
 
-$btn-font-size: 12 !default;
-$btn-font-family: 'Lato' !default;
-$btn-font-weight: 700 !default;
+$btn--font-size: 12 !default;
+$btn--font-family: 'Lato' !default;
+$btn--font-weight: 700 !default;
 
 // Button - border
 
-$btn-border-width: 2 !default;
-$btn-border-radius-sm: 5 !default;
-$btn-border-radius-lg: 100 !default;
+$btn--border-width: 2 !default;
+$btn--border-radius-sm: 5 !default;
+$btn--border-radius-lg: 100 !default;
 
 // Button - animation
 
-$btn-transition: all 0.15s ease-in-out !default;
+$btn--transition: all 0.15s ease-in-out !default;
