--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 	'abstracts/mixins';
 
 // 2. Vendors
-@import 'vendors/reset', 'vendors/form-reset';
+@import 'vendors/reset';
 
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
