Added responsive grid

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,1 +1,2 @@
-@import 'mixins/button', 'mixins/alert', 'mixins/form';
+@import 'mixins/button', 'mixins/alert', 'mixins/form', 'mixins/grid',
+	'mixins/responsive';
