--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,4 +3,4 @@
 //
 
 @import 'variables/button', 'variables/typography', 'variables/alert',
-	'variables/form';
+	'variables/form', 'variables/grid', 'variables/responsive';
