--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,8 @@
 @import 'vendors/reset';
 
 // 3. Base stuff
-@import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
+@import 'base/base', 'base/fonts', 'base/typography', 'base/helpers',
+	'base/grid';
 
 // 4. Layout-related sections
 @import 'layout/header', 'layout/footer';
